<resources>
    <string name="app_name">calculadora-de-notas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_title">Calculadora IMD</string>
    <string name="btn_calculadora_title">Calculadora</string>
    <string name="btn_notas_title">Notas</string>

    <string name="frag_notas_title">Calcule sua média</string>
    <string name="nota_1">Insira nota 1</string>
    <string name="nota_2">Insira nota 2</string>
    <string name="nota_3">Insira nota 3</string>
    <string name="label_situacao">Situação:</string>
    <string name="button_calcular_nota">Calcular</string>

    <string name="resultado_calculadora">Resultado:</string>

    <string name="label_desenvolvedor">Desenvolvido por Elias Farias da Silva</string>

</resources>